# live-bootcamp-project

./: compose.yml
.github/workflows/: prod.yml
auth-service/: Cargo.toml
auth-service/.sqlx/: query-fb6cade18c0709ac014a93c0fbd2597d3223da77a0cc00492fbf26d4b5564e98.json
auth-service/src/: app_state.rs  lib.rs  main.rs  services.rs  utils.rs
auth-service/src/domain/: data_stores.rs  email.rs  password.rs
auth-service/src/routes/: login.rs  logout.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: data_stores.rs  hashmap_two_fa_code_store.rs  hashmap_user_store.rs  hashset_banned_token_store.rs  mock_email_client.rs
auth-service/src/services/data_stores/: hashmap_user_store.rs  postgres_user_store.rs  redis_banned_token_store.rs  redis_two_fa_code_store.rs
auth-service/src/utils/: auth.rs  constants.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  routes.rs  signup.rs  verify_2fa.rs  verify_token.rs
